[gd_scene load_steps=6 format=3 uid="uid://dhrhbkegc35qf"]

[ext_resource type="Script" uid="uid://bub163oegeem3" path="res://BOT_sistem/BOTS_for_race.gd" id="1_du4xg"]
[ext_resource type="PhysicsMaterial" uid="uid://dioc2dlho64fc" path="res://car_physic_material/car_physic.tres" id="1_vvk1t"]
[ext_resource type="ArrayMesh" uid="uid://ccuo25onnns44" path="res://Cars/sentinel_gt/corvette_body.obj" id="2_vvk1t"]
[ext_resource type="ArrayMesh" uid="uid://c3ua5r7rpu2kl" path="res://Cars/sentinel_gt/corvette_wheel.obj" id="4_xk2tc"]

[sub_resource type="SphereShape3D" id="SphereShape3D_o050j"]
radius = 1.80891

[node name="SentinelGtBot" type="VehicleBody3D"]
collision_mask = 507
mass = 200.0
physics_material_override = ExtResource("1_vvk1t")
gravity_scale = 5.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -1, 0)
script = ExtResource("1_du4xg")

[node name="CorvetteBody" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.0208251, -0.928404)
mesh = ExtResource("2_vvk1t")

[node name="wheel_1" type="VehicleWheel3D" parent="."]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0.66, -0.262028, 0.91297)
use_as_steering = true
wheel_roll_influence = 1.5
wheel_radius = 0.49
wheel_friction_slip = 10.0
suspension_stiffness = 100.0
suspension_max_force = 100000.0
damping_compression = 10.0
damping_relaxation = 10.0

[node name="CorvetteWheel" type="MeshInstance3D" parent="wheel_1"]
transform = Transform3D(0.685, 0, 0, 0, 0.685, 0, 0, 0, 0.685, 0, 0, 0)
mesh = ExtResource("4_xk2tc")
skeleton = NodePath("../..")

[node name="wheel_2" type="VehicleWheel3D" parent="."]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, -0.66, -0.260028, 0.91297)
use_as_steering = true
wheel_roll_influence = 1.5
wheel_radius = 0.49
wheel_friction_slip = 10.0
suspension_stiffness = 100.0
suspension_max_force = 100000.0
damping_compression = 10.0
damping_relaxation = 10.0

[node name="CorvetteWheel" type="MeshInstance3D" parent="wheel_2"]
transform = Transform3D(-0.685, 0, -5.98846e-08, 0, 0.685, 0, 5.98846e-08, 0, -0.685, 0, 0, 0)
mesh = ExtResource("4_xk2tc")
skeleton = NodePath("../..")

[node name="wheel_3" type="VehicleWheel3D" parent="."]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0.855425, -0.32561, -1.28783)
use_as_traction = true
wheel_roll_influence = 1.5
wheel_radius = 0.49
wheel_friction_slip = 10.0
suspension_stiffness = 100.0
suspension_max_force = 100000.0
damping_compression = 10.0
damping_relaxation = 10.0

[node name="CorvetteWheel" type="MeshInstance3D" parent="wheel_3"]
transform = Transform3D(0.685, 0, 0, 0, 0.685, 0, 0, 0, 0.685, 0, 0, 0)
mesh = ExtResource("4_xk2tc")

[node name="wheel_4" type="VehicleWheel3D" parent="."]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, -0.855, -0.326, -1.287)
use_as_traction = true
wheel_roll_influence = 1.5
wheel_radius = 0.49
wheel_friction_slip = 10.0
suspension_stiffness = 100.0
suspension_max_force = 100000.0
damping_compression = 10.0
damping_relaxation = 10.0

[node name="CorvetteWheel" type="MeshInstance3D" parent="wheel_4"]
transform = Transform3D(-0.685, 0, -5.98846e-08, 0, 0.685, 0, 5.98846e-08, 0, -0.685, 0, 0, 0)
mesh = ExtResource("4_xk2tc")
skeleton = NodePath("../..")

[node name="checkpoint_sensor" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.397)
collision_layer = 0
collision_mask = 128

[node name="CollisionShape3D" type="CollisionShape3D" parent="checkpoint_sensor"]
shape = SubResource("SphereShape3D_o050j")
debug_color = Color(0.47455, 0.00208011, 0.733338, 0.133333)

[node name="shock_sensor" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0198343, 1.69723)
target_position = Vector3(0, 0, 1.165)
collision_mask = 2

[node name="shock_timer_sensor" type="Timer" parent="."]

[connection signal="area_entered" from="checkpoint_sensor" to="." method="_on_checkpoint_sensor_area_entered"]
[connection signal="timeout" from="shock_timer_sensor" to="." method="_on_shock_timer_sensor_timeout"]
